# ORE

./: .gitignore  CODEX.md  COMMANDS.md
ai-rag/: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  MAKEFILE  README.md  app.py  config.py  ingest.py  main.py  pyproject.toml  rag_chat.py  requirements.txt  test_chunks.py  test_embeddings.py  test_search.py
ai-rag/chroma_db/: chroma.sqlite3
ai-rag/chunking/: chunker.py
ai-rag/docker/: Dockerfile  docker-compose.yml
ai-rag/embedding/: embedder.py
ai-rag/ingestion/: pdf_processor.py
ai-rag/prompts/: __init__.py
ai-rag/retrieval/: retriever.py
ai-rag/src/orerag/: __init__.py  cli.py  config.py
ai-rag/src/orerag/api/: __init__.py  app.py
ai-rag/src/orerag/chunking/: __init__.py  chunker.py
ai-rag/src/orerag/embedding/: __init__.py  embedder.py
ai-rag/src/orerag/ingestion/: __init__.py  pdf_processor.py
ai-rag/src/orerag/pipeline/: __init__.py  chat.py  ingest.py
ai-rag/src/orerag/prompts/: __init__.py
ai-rag/src/orerag/retrieval/: __init__.py  retriever.py
ai-rag/src/orerag/storage/: __init__.py  vector_store.py
ai-rag/storage/: vector_store.py
ai-rag/tests/: __init__.py  conftest.py  test_api.py  test_chunking.py  test_cli.py  test_embedding.py  test_ingestion.py  test_pipeline.py  test_prompts.py  test_retrieval.py  test_storage.py
frontend/: AGENTS.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/notes/: page.tsx
